--- a/pinyougou-manager-web/src/main/webapp/admin/brand.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/brand.html
@@ -13,18 +13,111 @@
 <script src="../plugins/bootstrap/js/bootstrap.min.js"></script>
 
 <script type="text/javascript" src="../plugins/angularjs/angular.min.js"></script>
+
+<!-- 分页组件开始 -->
+<script src="../plugins/angularjs/pagination.js"></script>
+<link rel="stylesheet" href="../plugins/angularjs/pagination.css">
+<!-- 分页组件结束 -->
+
+
 <script type="text/javascript">
-	var app = angular.module('pinyougou', []);
+	var app = angular.module('pinyougou', [ 'pagination' ]);
 	app.controller('brandController', function($scope, $http) {
 		$scope.findAll = function() {
 			$http.get('../brand/findAll.do').success(function(response) {
 				$scope.list = response;
 			});
 		}
+		//分页控件配置currentPage:当前页   totalItems :总记录数  itemsPerPage:每页记录数  perPageOptions :分页选项  onChange:当页码变更后自动触发的方法 
+		$scope.paginationConf = {
+			currentPage : 1,
+			totalItems : 10,
+			itemsPerPage : 10,
+			perPageOptions : [ 10, 20, 30, 40, 50 ],
+			onChange : function() {
+				$scope.reloadList();
+			}
+		};
+
+		/* //刷新列表
+		$scope.reloadList = function() {
+			$scope.findPage($scope.paginationConf.currentPage,
+					$scope.paginationConf.itemsPerPage);
+		} */
+		//刷新列表 
+		$scope.reloadList = function() {
+			$scope.search($scope.paginationConf.currentPage,
+					$scope.paginationConf.itemsPerPage);
+		}
+
+		//分页 
+		$scope.findPage = function(page, size) {
+			$http.get('../brand/findPage.do?page=' + page + '&size=' + size)
+					.success(function(response) {
+						$scope.list = response.rows;//显示当前页数据 	
+						$scope.paginationConf.totalItems = response.total;//更新总记录数 
+					});
+		}
+		//保存 
+		$scope.save = function() {
+			var methodName = 'add';//方法名称
+			if ($scope.entity.id != null) {//如果有ID
+				methodName = 'update';//则执行修改方法 
+			}
+			$http.post('../brand/' + methodName + '.do', $scope.entity)
+					.success(function(response) {
+						if (response.success) {
+							//重新查询 
+							$scope.reloadList();//重新加载
+						} else {
+							alert(response.message);
+						}
+					});
+		}
+
+		//查询实体 
+		$scope.findOne = function(id) {
+			$http.get('../brand/findOne.do?id=' + id).success(
+					function(response) {
+						$scope.entity = response;
+					});
+		}
+
+		$scope.selectIds = [];//选中的ID集合 
+		//更新复选
+		$scope.updateSelection = function($event, id) {
+			if ($event.target.checked) {//如果是被选中,则增加到数组
+				$scope.selectIds.push(id);
+			} else {
+				var idx = $scope.selectIds.indexOf(id);
+				$scope.selectIds.splice(idx, 1);//删除 
+			}
+		}
+		//批量删除 
+		$scope.dele = function() {
+			//获取选中的复选框			
+			$http.get('../brand/delete.do?ids=' + $scope.selectIds).success(
+					function(response) {
+						if (response.success) {
+							$scope.reloadList();//刷新列表
+						}
+					});
+		}
+
+		$scope.searchEntity = {};//定义搜索对象 			
+		//条件查询 
+		$scope.search = function(page, rows) {
+			$http.post('../brand/search.do?page=' + page + "&rows=" + rows,
+					$scope.searchEntity).success(function(response) {
+				$scope.paginationConf.totalItems = response.total;//总记录数 
+				$scope.list = response.rows;//给列表变量赋值 
+			});
+		}
+
 	});
 </script>
 </head>
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController" ng-init="findAll()">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="brandController">
 	<!-- .box-body -->
 	<div class="box-header with-border">
 		<h3 class="box-title">品牌管理</h3>
@@ -39,11 +132,11 @@
 			<div class="pull-left">
 				<div class="form-group form-inline">
 					<div class="btn-group">
-						<button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal">
+						<button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal" ng-click="entity={}">
 							<i class="fa fa-file-o"></i>
 							新建
 						</button>
-						<button type="button" class="btn btn-default" title="删除">
+						<button type="button" class="btn btn-default" title="删除" ng-click="dele()">
 							<i class="fa fa-trash-o"></i>
 							删除
 						</button>
@@ -55,7 +148,14 @@
 				</div>
 			</div>
 			<div class="box-tools pull-right">
-				<div class="has-feedback"></div>
+				<div class="has-feedback">
+					品牌名称:
+					<input ng-model="searchEntity.name">
+					品牌首字母:
+					<input ng-model="searchEntity.firstChar">
+					<button class="btn btn-default" ng-click="reloadList()">查询</button>
+				</div>
+
 			</div>
 			<!--工具栏/-->
 
@@ -75,19 +175,20 @@
 				<tbody>
 					<tr ng-repeat="entity in list">
 						<td>
-							<input type="checkbox">
+							<input type="checkbox" ng-click="updateSelection($event,entity.id)">
 						</td>
 						<td>{{entity.id}}</td>
 						<td>{{entity.name}}</td>
 						<td>{{entity.firstChar}}</td>
 						<td class="text-center">
-							<button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal">修改</button>
+							<button type="button" class="btn bg-olive btn-xs" data-toggle="modal" data-target="#editModal" ng-click="findOne(entity.id)">修改</button>
 						</td>
 					</tr>
-					
+
 				</tbody>
 			</table>
 			<!--数据列表/-->
+			<tm-pagination conf="paginationConf"></tm-pagination>
 
 
 		</div>
@@ -112,19 +213,19 @@
 						<tr>
 							<td>品牌名称</td>
 							<td>
-								<input class="form-control" placeholder="品牌名称">
+								<input class="form-control" placeholder="品牌名称" ng-model="entity.name">
 							</td>
 						</tr>
 						<tr>
 							<td>首字母</td>
 							<td>
-								<input class="form-control" placeholder="首字母">
+								<input class="form-control" placeholder="首字母" ng-model="entity.firstChar">
 							</td>
 						</tr>
 					</table>
 				</div>
 				<div class="modal-footer">
-					<button class="btn btn-success" data-dismiss="modal" aria-hidden="true">保存</button>
+					<button class="btn btn-success" data-dismiss="modal" aria-hidden="true" ng-click="save()">保存</button>
 					<button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
 				</div>
 			</div>
