--- a/pinyougou-manager-web/src/main/webapp/login.html
+++ b/pinyougou-manager-web/src/main/webapp/login.html
@@ -2,15 +2,15 @@
 <html>
 
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
-	<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
-	<title>品优购运营商运营管理后台</title>
-	 <link rel="icon" href="../assets/img/favicon.ico">
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=9; IE=8; IE=7; IE=EDGE">
+<meta http-equiv="X-UA-Compatible" content="IE=EmulateIE7" />
+<title>品优购运营商运营管理后台</title>
+<link rel="icon" href="../assets/img/favicon.ico">
 
 
-    <link rel="stylesheet" type="text/css" href="css/webbase.css" />
-    <link rel="stylesheet" type="text/css" href="css/pages-login-manage.css" />
+<link rel="stylesheet" type="text/css" href="css/webbase.css" />
+<link rel="stylesheet" type="text/css" href="css/pages-login-manage.css" />
 </head>
 
 <body>
@@ -37,21 +37,24 @@
 						<img src="../img/wx_cz.jpg" />
 					</div>
 					<div id="profile" class="tab-pane  active">
-						<form class="sui-form">
-							<div class="input-prepend"><span class="add-on loginname"></span>
-								<input id="prependedInput" type="text" placeholder="邮箱/用户名/手机号" class="span2 input-xfat">
+						<form class="sui-form" action="/login" method="post" id="loginform">
+							<div class="input-prepend">
+								<span class="add-on loginname"></span>
+								<input id="prependedInput" type="text" name="username" placeholder="邮箱/用户名/手机号" class="span2 input-xfat">
 							</div>
-							<div class="input-prepend"><span class="add-on loginpwd"></span>
-								<input id="prependedInput" type="password" placeholder="请输入密码" class="span2 input-xfat">
+							<div class="input-prepend">
+								<span class="add-on loginpwd"></span>
+								<input id="prependedInput" name="password" type="password" placeholder="请输入密码" class="span2 input-xfat">
 							</div>
 							<div class="setting">
-								 <div id="slider">
+								<div id="slider">
 									<div id="slider_bg"></div>
-									<span id="label">>></span> <span id="labelTip">拖动滑块验证</span>
-									</div>
+									<span id="label">>></span>
+									<span id="labelTip">拖动滑块验证</span>
+								</div>
 							</div>
 							<div class="logined">
-								<a class="sui-btn btn-block btn-xlarge btn-danger" href="admin/index.html" target="_blank">登&nbsp;&nbsp;录</a>
+								<a class="sui-btn btn-block btn-xlarge btn-danger" href="javascript:void(0);" onclick="document:loginform.submit()" target="_blank">登&nbsp;&nbsp;录</a>
 							</div>
 						</form>
 
@@ -76,25 +79,24 @@
 			<li>品优购社区</li>
 		</ul>
 		<div class="address">地址：北京市昌平区建材城西路金燕龙办公楼一层 邮编：100096 电话：400-618-4000 传真：010-82935100</div>
-		<div class="beian">京ICP备08001421号京公网安备110108007702
-		</div>
+		<div class="beian">京ICP备08001421号京公网安备110108007702</div>
 	</div>
 
 
-<script type="text/javascript" src="js/plugins/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="js/plugins/sui/sui.min.js"></script>
-<script type="text/javascript" src="js/plugins/jquery-placeholder/jquery.placeholder.min.js"></script>
-<script src="js/pages/jquery.slideunlock.js"></script>
-<script>
-	$(function(){
-		var slider = new SliderUnlock("#slider",{
-				successLabelTip : "欢迎访问品优购"	
-			},function(){
+	<script type="text/javascript" src="js/plugins/jquery/jquery.min.js"></script>
+	<script type="text/javascript" src="js/plugins/sui/sui.min.js"></script>
+	<script type="text/javascript" src="js/plugins/jquery-placeholder/jquery.placeholder.min.js"></script>
+	<script src="js/pages/jquery.slideunlock.js"></script>
+	<script>
+		$(function() {
+			var slider = new SliderUnlock("#slider", {
+				successLabelTip : "欢迎访问品优购"
+			}, function() {
 				// alert("验证成功,即将跳转至首页");
-            	// window.location.href="index.html"
-        	});
-        slider.init();
-	})
+				// window.location.href="index.html"
+			});
+			slider.init();
+		})
 	</script>
 </body>
 
