--- a/pinyougou-shop-web/src/main/webapp/admin/index.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body class="hold-transition skin-blue sidebar-mini" ng-init="showLoginName()">
+<body class="hold-transition skin-blue sidebar-mini" ng-app="pinyougou" ng-controller="indexController" ng-init="showLoginName()">
 
     <div class="wrapper">
 
