--- a/pinyougou-manager-web/src/main/webapp/admin/type_template.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/type_template.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="../css/style.css">
     <script src="../plugins/jQuery/jquery-2.2.3.min.js"></script>
     <script src="../plugins/bootstrap/js/bootstrap.min.js"></script>
+
     <link rel="stylesheet" href="../plugins/select2/select2.css"/>
     <link rel="stylesheet" href="../plugins/select2/select2-bootstrap.css"/>
     <script src="../plugins/select2/select2.min.js" type="text/javascript"></script>
@@ -37,8 +38,7 @@
 
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="typeTemplateController"
-      ng-init="findBrandList();findSpecList()">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="typeTemplateController" ng-init="findBrandList();findSpecList()">
 <!-- .box-body -->
 
 <div class="box-header with-border">
